Word wrapping in portlets inside IE fixed

--- a/src/main/public_html/css/portlet-ie.css
+++ b/src/main/public_html/css/portlet-ie.css
@@ -11,21 +11,9 @@ body {
 #portal-top {
 height: 100%;
 }
-fieldset .radio {
-	margin: 0 0 -3px 0;
-}
-.button {
-	padding: 1px 2px 0;
-}
 .boxcontent ul {
 	padding-left: 18px;
 }
 .boxcontent li {
 	word-wrap: break-word;
-}
-input { 
-	background-color: expression(this.type=="radio" || this.type=="checkbox" ? 'inherit' : 'white');
-	border-color: expression(this.disabled?'gray':'#C60');
-	border-style: solid;
-	border-width: expression(this.type=="radio" || this.type=="checkbox" ? '0' : '1px');
 }
